--- a/settings.json
+++ b/settings.json
@@ -1,7 +1,7 @@
 {
     "window.autoDetectColorScheme": true,
     "window.confirmBeforeClose": "keyboardOnly",
-    "window.titleBarStyle": "native",
+    "window.titleBarStyle": "custom",
     "window.customTitleBarVisibility": "auto",
     "window.title": "${activeEditorMedium}${separator}${rootName}",
     "window.commandCenter": false,
@@ -13,7 +13,7 @@
     // 浅色主题
     "workbench.preferredLightColorTheme": "Espresso Soda",
     // 深色主题
-    "workbench.preferredDarkColorTheme": "Dracula Theme",
+    "workbench.preferredDarkColorTheme": "Catppuccin Frappé",
     // editor cursor
     "editor.cursorStyle": "line",
     "editor.cursorBlinking": "smooth",
@@ -30,33 +30,6 @@
     "editor.fontFamily": "'Intel One Mono', 'LXGW WenKai', monospace",
     "editor.renderWhitespace": "selection",
     "editor.minimap.autohide": false,
-    // 定制语法高亮颜色
-    "editor.semanticTokenColorCustomizations": {
-        "[Atom One Light], [Espresso Soda], [Moegi Light Vitesse], [Quiet Light], [Vitesse Light], [Solarized Light]": {
-            "rules": {
-                "property": "#000",
-            }
-        }
-    },
-    "editor.tokenColorCustomizations": {
-        "[Atom One Light], [Espresso Soda], [Moegi Light Vitesse], [Quiet Light], [Vitesse Light], [Solarized Light]": {
-            "textMateRules": [
-                {
-                    "scope": "variable",
-                    "settings": {
-                        "foreground": "#000",
-                        "fontStyle": "bold"
-                    },
-                },
-                {
-                    "scope": "variable.other",
-                    "settings": {
-                        "foreground": "#000"
-                    }
-                }
-            ]
-        }
-    },
     // 自动折叠 import 区块
     "editor.foldingImportsByDefault": false,
     // 终端配置
