--- a/settings.json
+++ b/settings.json
@@ -8,16 +8,18 @@
     // workbench
     "workbench.view.alwaysShowHeaderActions": false,
     "workbench.startupEditor": "welcomePageInEmptyWorkbench",
+    "workbench.list.smoothScrolling": true,
     // 工作区图标
     "workbench.productIconTheme": "fluent-icons",
+    "workbench.iconTheme": "vs-seti",
     // 浅色主题
-    "workbench.preferredLightColorTheme": "Espresso Soda",
+    "workbench.preferredLightColorTheme": "Tomorrow",
     // 深色主题
-    "workbench.preferredDarkColorTheme": "Catppuccin Frappé",
+    "workbench.preferredDarkColorTheme": "Vitesse Dark Soft",
     // editor cursor
-    "editor.cursorStyle": "line",
     "editor.cursorBlinking": "smooth",
     "editor.cursorSmoothCaretAnimation": "on",
+    "editor.smoothScrolling": true,
     "editor.cursorWidth": 3,
     // editor
     "editor.fontSize": 16,
@@ -29,9 +31,10 @@
     ],
     "editor.fontFamily": "'Intel One Mono', 'LXGW WenKai', monospace",
     "editor.renderWhitespace": "selection",
-    "editor.minimap.autohide": false,
-    // 自动折叠 import 区块
-    "editor.foldingImportsByDefault": false,
+    "editor.minimap.autohide": true,
+    "editor.scrollBeyondLastLine": false,
+    "editor.padding.bottom": 100,
+    "editor.stickyScroll.maxLineCount": 3,
     // 终端配置
     "terminal.integrated.fontFamily": "'Hack Nerd Font Mono', monospace",
     "terminal.integrated.fontSize": 14,
@@ -53,4 +56,5 @@
     //
     "redhat.telemetry.enabled": false,
     "telemetry.telemetryLevel": "off",
+    "chat.commandCenter.enabled": false,
 }
